--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,11 @@
 # Auto detect text files and perform LF normalization
-*	text=auto
+* text=auto
 
-*.cmd	text eol=crlf
-*.nsi	text eol=crlf
+*.cmd   text eol=crlf
+*.nsi   text eol=crlf
 
-*.m	text eol=lf
+*.m     text eol=lf
+*.sh    text eol=lf
+
+scripts/linux*    text eol=lf
 
