changed cmakelist files with correct compiler definition

--- a/coadapt-scenarios/share/coadapt/openvibe-scenarios/bci/p300-external-stimulator/p300-evidence-accumulator_v2.cfg
+++ b/coadapt-scenarios/share/coadapt/openvibe-scenarios/bci/p300-external-stimulator/p300-evidence-accumulator_v2.cfg
@@ -4,4 +4,5 @@
 	<SettingValue>1</SettingValue>
 	<SettingValue>${EarlyStopping}</SettingValue>
 	<SettingValue>${StopCondition}</SettingValue>
+	<SettingValue>Class probabilities</SettingValue>
 </OpenViBE-SettingsOverride>
