added accent to keyboard layouts
Former-commit-id: 2e568b3cd585a45e96d55d11c05ea4a4649240e1

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,10 @@ dist
 build
 CMakeLists.txt.*
 .*.swp
+*~
+externals
+CMakeLists_full.txt
+CMakeLists_COADAPT.txt
+coadapt.patch
+coadapt.patch.fc19
 
