--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,10 @@ SET(SKIP_DOCUMENTATION "1")
 #SET(SKIP_APPLICATIONS_PLATFORM_ACQUISITION-SERVER "1")
 #SET(SKIP_APPLICATIONS_PLATFORM_DESIGNER "1")
 
+SET(SKIP_APPLICATIONS_DEMOS_SSVEP-DEMO "1")
+SET(SKIP_APPLICATIONS_DEMOS_VR-DEMO "1")
+SET(SKIP_EXTERNALS_.GIT "1")
+
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")
 
 # If you wish you can uncomment the next line and add a file with additional information called OVBranches.cmake to
