removed executable flags on lua scripts in new ssvep
gitignore:
+ added all subfolders in externals to gitignore

applications/ssvep-ng:
* removed the executable flag from the lua scripts

--- a/applications/demos/ssvep-ng/share/openvibe-ssvep-demo.conf
+++ b/applications/demos/ssvep-ng/share/openvibe-ssvep-demo.conf
@@ -22,9 +22,8 @@ SSVEP_TargetDarkColourRed = 0.0
 SSVEP_TargetDarkColourGreen = 0.0
 SSVEP_TargetDarkColourBlue = 0.0
 
-Include = ${Path_Data}/applications/ssvep-demo/${SSVEP_ApplicationDescriptor}.conf
 Include = ${CustomConfigurationApplication}
-Include = ${CustomConfigurationPrefix${OperatingSystem}}-ssvep-demo-${SSVEP_ApplicationDescriptor}${CustomConfigurationSuffix${OperatingSystem}}
+Include = ${CustomConfigurationPrefix${OperatingSystem}}-ssvep-ng-${SSVEP_ApplicationDescriptor}${CustomConfigurationSuffix${OperatingSystem}}
 
 
 
