initial commit for this branch * interface-properties.xml : use software tagging * openvibe.conf : path to P300AcquisitionConfig.conf modified in accordance to  folder structure
Former-commit-id: 3ef90589bc63d42bb183862f42eae3bcea56fd62

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,8 @@ CMakeLists_full.txt
 CMakeLists_COADAPT.txt
 coadapt.patch
 coadapt.patch.fc19
+cmake-modules/FindThirdPartyBoost_Math.cmake
+cmake-modules/FindThirdPartyLibrariesForExternalStimulator.cmake
+cmake-modules/GNUInstallDirs.cmake
+coadapt.patch
 
