progress on ssvep-ng
application/ssvep-ng:
* [CMakeLists.txt] fixed paths to install into share/scenarios folder
* [6-performance-test-classifier.lua] fixed paths in the testing scenario
* [5-online-test-shooter.lua] renamed the online scenario

--- a/applications/demos/ssvep-ng/CMakeLists.txt
+++ b/applications/demos/ssvep-ng/CMakeLists.txt
@@ -80,6 +80,6 @@ INSTALL(TARGETS ${PROJECT_NAME}
 
 INSTALL(DIRECTORY share/ DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/applications/ssvep-ng  PATTERN ".svn" EXCLUDE)
 
-INSTALL(DIRECTORY bci DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
+INSTALL(DIRECTORY bci-examples DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
 
 #INSTALL(DIRECTORY src/   DESTINATION include FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
