progress with renaming ssvep-ng
applications/ssvep-mind-shooter:
* renamed the scenario folder to ssvep-mind-shooter
* [CMakeLists.txt] renamed the launchers and the destination folder
* [ovassvepCApplication.cpp] use configuration token to find the ressource folder
* [ovassvepCImpactApplication.cpp] use configuration token to find the ressource folder
* [ovassvep_defines.h] removed all of the code since it is deprecated

--- a/applications/demos/ssvep-mind-shooter/share/openvibe-ssvep-demo.conf
+++ b/applications/demos/ssvep-mind-shooter/share/openvibe-ssvep-demo.conf
@@ -1,3 +1,4 @@
+SSVEP_MindShooterFolderName = ssvep-mind-shooter
 SSVEP_VRPNServerPort = 1337
 SSVEP_VRPNHost = localhost
 
@@ -23,7 +24,7 @@ SSVEP_TargetDarkColourGreen = 0.0
 SSVEP_TargetDarkColourBlue = 0.0
 
 Include = ${CustomConfigurationApplication}
-Include = ${CustomConfigurationPrefix${OperatingSystem}}-ssvep-ng-${SSVEP_ApplicationDescriptor}${CustomConfigurationSuffix${OperatingSystem}}
+Include = ${CustomConfigurationPrefix${OperatingSystem}}-${SSVEP_MindShooterFolderName}-${SSVEP_ApplicationDescriptor}${CustomConfigurationSuffix${OperatingSystem}}
 
 
 
