Refactored Hilbert transform code by Jussi T. Lindgren. Automatic test for Hilbert and AR features.
The refactored version of Hilbert transform consist in segregating
the algorithm part that actually compute the transform from the
openvibe part that link the algorithm to the box.

The DartTestFile.txt describes the tests, the scenario tests are
needed as well as the .ref.csv file that contains the reference data


Signed-off-by: Alison Cellard <alison.cellard@inria.fr>

--- a/plugins/processing/signal-processing/CMakeLists.txt
+++ b/plugins/processing/signal-processing/CMakeLists.txt
@@ -42,6 +42,10 @@ IF(UNIX)
 	ADD_DEFINITIONS(-DTARGET_COMPILER_GCC)
 ENDIF(UNIX)
 
+IF(OV_COMPILE_TESTS)
+    ADD_SUBDIRECTORY("test")
+ENDIF(OV_COMPILE_TESTS)
+
 # -----------------------------
 # Install files
 # -----------------------------
