prototype of a modifiable UI during run of a scenario

--- a/plugins/processing/examples/CMakeLists.txt
+++ b/plugins/processing/examples/CMakeLists.txt
@@ -18,6 +18,7 @@ INCLUDE("FindOpenViBEToolkit")
 INCLUDE("FindOpenViBEModuleEBML")
 INCLUDE("FindOpenViBEModuleSystem")
 INCLUDE("FindOpenViBEModuleXML")
+INCLUDE("FindThirdPartyGTK")#for modUI
 
 # ---------------------------------
 # Target macros
