fixed bug in classifier config file
Former-commit-id: c3607b1b5bf9413a33544937ad26e333bb12528f

--- a/coadapt-scenarios/share/coadapt/openvibe-scenarios/bci/p300-external-stimulator/p300-classifier-trainer_v2.cfg
+++ b/coadapt-scenarios/share/coadapt/openvibe-scenarios/bci/p300-external-stimulator/p300-classifier-trainer_v2.cfg
@@ -1,5 +1,5 @@
 <OpenViBE-SettingsOverride>
-	<SettingValue>${ClassifierAlgorithm}</SettingValue>
+	<SettingValue>Relearn Probabilistic LDA</SettingValue>
 	<SettingValue>${Path_Samples_CoAdapt}/bci/p300-external-stimulator/${paramFile}-classifier.cfg</SettingValue>
 	<SettingValue>OVTK_StimulationId_TrainCompleted</SettingValue>
 	<SettingValue>1</SettingValue>
