--- a/kernel/share/openvibe.conf
+++ b/kernel/share/openvibe.conf
@@ -19,7 +19,7 @@
 #Path_Lib = ${Path_Root}/lib
 #Path_Data = ${Path_Root}/share/openvibe
 #Path_Samples = ${Path_Data}/scenarios
-## By default, "Path_UserData" will point to $HOME/.config/openvibe on Linux, and to $APPDATA/openvibe/ on Windows.
+## By default, "Path_UserData" will point to $HOME/.config/openvibe on Linux, and to %APPDATA%/openvibe/ on Windows.
 #Path_UserData = ${Path_Root}/openvibe-user
 #Path_Log = ${Path_UserData}/log
 #Path_Tmp = ${Path_UserData}/tmp
@@ -164,19 +164,6 @@ PluginInspector_DumpAlgorithmSnapshotDirectory =
 PluginInspector_DumpAlgorithmDocTemplateDirectory =
 PluginInspector_DumpBoxAlgorithmSnapshotDirectory =
 PluginInspector_DumpBoxAlgorithmDocTemplateDirectory =
-
-#####################################################################################
-# Include custom configuration (from deprecated locations)
-# Actual custom configuration below will override these, if its found.
-#####################################################################################
-CustomConfigurationPrefixWindows = ${UserHome}/openvibe
-CustomConfigurationPrefixLinux = ${UserHome}/.openvibe
-CustomConfigurationSuffixWindows = .conf
-CustomConfigurationSuffixLinux = rc
-CustomConfiguration = ${CustomConfigurationPrefix${OperatingSystem}}${CustomConfigurationSuffix${OperatingSystem}}
-CustomConfigurationApplication = ${CustomConfigurationPrefix${OperatingSystem}}-${ApplicationName}${CustomConfigurationSuffix${OperatingSystem}}
-Include = ${CustomConfigurationApplication}
-Include = ${CustomConfiguration}
 
 #####################################################################################
 # Include custom configuration
