--- a/contrib/plugins/processing/python/CMakeLists.txt
+++ b/contrib/plugins/processing/python/CMakeLists.txt
@@ -50,8 +50,15 @@ INSTALL(TARGETS ${PROJECT_NAME}
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
 
 #INSTALL(DIRECTORY signals      DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
-INSTALL(DIRECTORY box-tutorials DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
+IF(WIN32)
+	# The pygame scenario doesn't work on Windows, so do not install it
+	INSTALL(DIRECTORY box-tutorials DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE PATTERN "*-pygame-*" EXCLUDE)
+ELSE(WIN32)	
+	INSTALL(DIRECTORY box-tutorials DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
+ENDIF(WIN32)
+
 INSTALL(DIRECTORY share/        DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/plugins/python PATTERN ".svn" EXCLUDE)
+
 
 #INSTALL(DIRECTORY src/   DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
 
