--- a/kernel/share/openvibe.conf
+++ b/kernel/share/openvibe.conf
@@ -5,7 +5,7 @@
 ## - Whatever space / tabulation at the begining or end of a line is removed
 ## - Comments start with #
 ## - Lines ending with \ continue on the next line (all ending \ are removed)
-## - On Windows, use \ in paths as / is reserved
+## - On Windows, use / in paths as \ is reserved
 ## - You can use ${token name} in a token value
 ## - You can use $Environment{env name} in a token value to get an environment variable
 ######################################################################################
