--- a/kernel/share/openvibe.conf
+++ b/kernel/share/openvibe.conf
@@ -36,8 +36,8 @@ Program_Launcher_PrefixWindows = openvibe-
 Program_Launcher_PrefixLinux = openvibe-
 Program_Launcher_Prefix = ${Program_Launcher_Prefix${OperatingSystem}}
 
-External_Application_LauncherWindows = ${Path_Bin}/openvibe-external-application-launcher.cmd
-External_Application_LauncherLinux = ${Path_Bin}/openvibe-external-application-launcher
+External_Application_LauncherWindows = "${Path_Bin}/openvibe-external-application-launcher.cmd"
+External_Application_LauncherLinux = "${Path_Bin}/openvibe-external-application-launcher"
 External_Application_Launcher = ${External_Application_Launcher${OperatingSystem}}
 
 VRPN_ExternalServerPort = 53883
