--- a/contrib/plugins/processing/file-io/CMakeLists.txt
+++ b/contrib/plugins/processing/file-io/CMakeLists.txt
@@ -17,6 +17,7 @@ INCLUDE("FindOpenViBECommon")
 INCLUDE("FindOpenViBEToolkit")
 INCLUDE("FindOpenViBEModuleEBML")
 INCLUDE("FindOpenViBEModuleSystem")
+INCLUDE("FindThirdPartyBoost")
 
 # ---------------------------------
 # Target macros
