Use the new xml interface in classification.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

--- a/toolkit/CMakeLists.txt
+++ b/toolkit/CMakeLists.txt
@@ -25,6 +25,7 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 INCLUDE("FindOpenViBE")
 INCLUDE("FindOpenViBECommon")
 INCLUDE("FindOpenViBEModuleEBML")
+INCLUDE("FindOpenViBEModuleXML")
 INCLUDE("FindOpenViBEModuleSystem")
 
 # ---------------------------------
