--- a/applications/demos/vr-demo/bci-examples/handball/motor-imagery-bci-config-classifier.cfg
+++ b/applications/demos/vr-demo/bci-examples/handball/motor-imagery-bci-config-classifier.cfg
@@ -1,6 +1,15 @@
-<OpenViBE-Classifier>
-	<LDA>
-		<Classes>1 2</Classes>
-		<Coefficients>1.228474e+00 4.852093e+00 -5.293004e+00</Coefficients>
-	</LDA>
-</OpenViBE-Classifier>
+<OpenViBE-Classifier-Box>
+	<Strategy-Identifier>Native</Strategy-Identifier>
+	<Algorithm-Identifier>Linear Discrimimant Analysis (LDA)</Algorithm-Identifier>
+	<Stimulations>
+		<Rejected-Class>OVTK_StimulationId_Label_00</Rejected-Class>
+		<Class-Stimulation class-id="1">OVTK_GDF_Left</Class-Stimulation>
+		<Class-Stimulation class-id="2">OVTK_GDF_Right</Class-Stimulation>
+	</Stimulations>
+	<OpenViBE-Classifier>
+		<LDA>
+			<Classes>1 2</Classes>
+			<Coefficients>1.228474e+00 4.852093e+00 -5.293004e+00</Coefficients>
+		</LDA>
+	</OpenViBE-Classifier>
+</OpenViBE-Classifier-Box>
