Change CSP bci example.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

--- a/applications/demos/motor-imagery/bci-examples/motor-imagery-CSP/motor-imagery-bci-config-classifier.cfg
+++ b/applications/demos/motor-imagery/bci-examples/motor-imagery-CSP/motor-imagery-bci-config-classifier.cfg
@@ -1,6 +1,15 @@
-<OpenViBE-Classifier>
-	<LDA>
-		<Classes>1 2</Classes>
-		<Coefficients>1.223809e+000 -1.419543e+001 -3.913606e+001 -3.841493e+000 1.238020e+002 8.163432e+000 1.116996e+002</Coefficients>
-	</LDA>
-</OpenViBE-Classifier>
+<OpenViBE-Classifier-Box>
+	<Strategy-Identifier>Native</Strategy-Identifier>
+	<Algorithm-Identifier>Linear Discrimimant Analysis (LDA)</Algorithm-Identifier>
+	<Stimulations>
+		<Rejected-Class>OVTK_StimulationId_Label_00</Rejected-Class>
+		<Class-Stimulation class-id="1">OVTK_GDF_Left</Class-Stimulation>
+		<Class-Stimulation class-id="2">OVTK_GDF_Right</Class-Stimulation>
+	</Stimulations>
+	<OpenViBE-Classifier>
+		<LDA>
+			<Classes>1 2</Classes>
+			<Coefficients>1.226882e+00 -1.419376e+01 -3.913018e+01 -3.845624e+00 1.238380e+02 8.166035e+00 1.114587e+02</Coefficients>
+		</LDA>
+	</OpenViBE-Classifier>
+</OpenViBE-Classifier-Box>
