replaced ftgl by pango/cairo for drawing the characters
Former-commit-id: 39bc3766e2c6f8efd7b2fca68f27a66eaff647e8

--- a/contrib/applications/platform/P300Stimulator/CMakeLists.txt
+++ b/contrib/applications/platform/P300Stimulator/CMakeLists.txt
@@ -17,6 +17,7 @@ INCLUDE("FindOpenViBEModuleSystem")
 INCLUDE("FindOpenViBEModuleXML")
 INCLUDE("FindThirdPartyBoost")
 INCLUDE("FindThirdPartyLibrariesForExternalStimulator")
+INCLUDE("FindThirdPartyGTK")#to use gtk package content i.e cairo pango frretype
 
 #so that boost won't need to link against DateTime when using the interprocess communication library
 ADD_DEFINITIONS(-DBOOST_DATE_TIME_NO_LIB)
