--- a/applications/demos/motor-imagery/bci-examples/motor-imagery-CSP/motor-imagery-bci-config-classifier.cfg
+++ b/applications/demos/motor-imagery/bci-examples/motor-imagery-CSP/motor-imagery-bci-config-classifier.cfg
@@ -1,6 +1,6 @@
 <OpenViBE-Classifier-Box XMLVersion="2">
-	<Strategy-Identifier class_id="18446744073709551615">Native</Strategy-Identifier>
-	<Algorithm-Identifier class_id="15499208244705161880">Linear Discrimimant Analysis (LDA)</Algorithm-Identifier>
+	<Strategy-Identifier class-id="18446744073709551615">Native</Strategy-Identifier>
+	<Algorithm-Identifier class-id="15499208244705161880">Linear Discrimimant Analysis (LDA)</Algorithm-Identifier>
 	<Stimulations>
 		<Rejected-Class>OVTK_StimulationId_Label_00</Rejected-Class>
 		<Class-Stimulation class-id="1">OVTK_GDF_Left</Class-Stimulation>
