code reorganisation, CSVReader to read sequence of flashes, NULL Stimulator for replay mode, some CMake fixes
Former-commit-id: d28ef546816cb673ef08e6f12cadd9d451aec647

--- a/contrib/applications/platform/P300Stimulator/share/openvibe/applications/externalP300Stimulator/P300AcquisitionConfig.conf
+++ b/contrib/applications/platform/P300Stimulator/share/openvibe/applications/externalP300Stimulator/P300AcquisitionConfig.conf
@@ -1,18 +1,20 @@
 NrOfRepetitions=4
 SubjectName=x1
-WordToSpell=ABCDEFGHIJ
-WordLength=10
+WordToSpell=LIVRE
+WordLength=5
 TrainFile=
 Channels=Fz;C3;Cz;C4;P7;P3;Pz;P4;P8;O1;Oz;O2
 paramFile=p300
-FlashDuration=0.116666666667
-InterStimulusOnset=0.183333333333
-InterRepDuration=0.0666666666667
-FlashGroupDefinitionFile=/home/ddevlami/openvibeNT/trunk/dist/share/coadapt/openvibe-scenarios/signals/x1/p300_x1_flash-group-definition_3.csv
+FlashDuration=0.133333333333
+InterStimulusOnset=0.233333333333
+InterRepDuration=0.1
+FlashGroupDefinitionFilee=/home/lmahe/replayData/P01S1-Cop20-1_flash-group-definition_2013.09.24_14.15.58.csv
+FlashGroupDefinitionFile=/home/lmahe/flash-group-definition_2013.09.24_14.15.58.csv
 EarlyStopping=False
 NumberOfGroups=6
-AcquisitionMode=free
-FlashMode=riprand
+AcquisitionMode=Copy
+StimulatorMode=Replay
+FlashMode=file
 StopCondition=0.9
 KeyboardLayout=openvibe/applications/externalP300Stimulator/5by10grid-gray.xml
 
