Build: Added pthread for VRPN apps built without boost
Required to build the OpenViBE-to-vrpn example on Linux.

--- a/applications/examples/openvibe-to-vrpn/CMakeLists.txt
+++ b/applications/examples/openvibe-to-vrpn/CMakeLists.txt
@@ -17,6 +17,7 @@ INCLUDE_DIRECTORIES(include)
 ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
 
 INCLUDE("FindThirdPartyVRPN")
+INCLUDE("FindThirdPartyPThread") # needed on Linux for VRPN
 
 # ---------------------------------
 # Target macros
