erp plot box needs boost dependency
Former-commit-id: b51bc64f01cafd512213c294c7bf10bebc7a6f74

--- a/plugins/processing/simple-visualisation/CMakeLists.txt
+++ b/plugins/processing/simple-visualisation/CMakeLists.txt
@@ -18,7 +18,7 @@ INCLUDE("FindOpenViBEToolkit")
 INCLUDE("FindOpenViBEModuleEBML")
 INCLUDE("FindOpenViBEModuleSystem")
 INCLUDE("FindThirdPartyGTK")
-
+INCLUDE("FindThirdPartyBoost")#need boost for erp plot
 # ---------------------------------
 # Target macros
 # Defines target operating system
