fixed compilation errors
Former-commit-id: 5d144e96db7c988d57cb21e58a29db19b94d3bc3

--- a/contrib/plugins/processing/classification/CMakeLists.txt
+++ b/contrib/plugins/processing/classification/CMakeLists.txt
@@ -18,6 +18,7 @@ INCLUDE("FindOpenViBEToolkit")
 INCLUDE("FindOpenViBEModuleEBML")
 INCLUDE("FindOpenViBEModuleSystem")
 INCLUDE("FindThirdPartyITPP")
+INCLUDE("FindOpenViBEModuleXML")#for gragient descent lda
 
 # ---------------------------------
 # Target macros
