--- a/plugins/processing/signal-processing/CMakeLists.txt
+++ b/plugins/processing/signal-processing/CMakeLists.txt
@@ -20,6 +20,9 @@ INCLUDE("FindOpenViBEModuleSystem")
 INCLUDE("FindThirdPartyBoost")
 INCLUDE("FindThirdPartyEigen")
 INCLUDE("FindThirdPartyITPP")
+#for additionnal coadapt plugins, the following
+INCLUDE("FindThirdPartyBoost_Math")
+INCLUDE("FindOpenViBEModuleXML")
 
 # ---------------------------------
 # Target macros
