--- a/applications/demos/p300/bci-examples/p300-speller/p300-classifier-processor.cfg
+++ b/applications/demos/p300/bci-examples/p300-speller/p300-classifier-processor.cfg
@@ -1,6 +1,6 @@
 <OpenViBE-SettingsOverride>
 	<SettingValue>Linear Discrimimant Analysis (LDA)</SettingValue>
-	<SettingValue>${__volatile_ScenarioDir}/p300-classifier.cfg</SettingValue>
+	<SettingValue>${Player_ScenarioDirectory}/p300-classifier.cfg</SettingValue>
 	<SettingValue>OVTK_StimulationId_Label_00</SettingValue>
 	<SettingValue>OVTK_StimulationId_Target</SettingValue>
 	<SettingValue>OVTK_StimulationId_NonTarget</SettingValue>
