--- a/applications/demos/ssvep-demo/bci-examples/ssvep/example-experiment-configuration.cfg
+++ b/applications/demos/ssvep-demo/bci-examples/ssvep/example-experiment-configuration.cfg
@@ -1,5 +1,5 @@
 <OpenViBE-SettingsOverride>
-	<SettingValue>${__volatile_ScenarioDir}/scripts/configuration-experiment-settings.lua</SettingValue>
+	<SettingValue>${Player_ScenarioDirectory}/scripts/configuration-experiment-settings.lua</SettingValue>
 	<SettingValue>100,0,0</SettingValue>
 	<SettingValue>10,10,10</SettingValue>
 	<SettingValue>20;15;12</SettingValue>
