Applications: Fixed TCPWriter example for Ubuntu 12.04

--- a/applications/examples/openvibe-to-tcpip/CMakeLists.txt
+++ b/applications/examples/openvibe-to-tcpip/CMakeLists.txt
@@ -12,6 +12,7 @@ ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
 
 INCLUDE("FindThirdPartyBoost")
 INCLUDE("FindThirdPartyBoost_System")
+INCLUDE("FindThirdPartyPThread")	# for ubuntu
 
 # ---------------------------------
 # Target macros
