moved shared memory writer to appropriate location
Former-commit-id: 511f822188bac200126ad668fde83065cec394da

--- a/plugins/processing/network-io/CMakeLists.txt
+++ b/plugins/processing/network-io/CMakeLists.txt
@@ -18,6 +18,10 @@ INCLUDE("FindOpenViBEToolkit")
 INCLUDE("FindThirdPartyBoost")
 INCLUDE("FindThirdPartyBoost_System")
 
+#so that boost won't need to link against DateTime when using the interprocess communication library
+#shared memory writer box
+ADD_DEFINITIONS(-DBOOST_DATE_TIME_NO_LIB)
+
 # ---------------------------------
 # Finds standard library winmm
 # Adds library to target
