--- a/contrib/applications/platform/P300Stimulator/share/openvibe/applications/externalP300Stimulator/P300AcquisitionConfig.conf
+++ b/contrib/applications/platform/P300Stimulator/share/openvibe/applications/externalP300Stimulator/P300AcquisitionConfig.conf
@@ -1,7 +1,7 @@
 NrOfRepetitions=4
 SubjectName=x1
-WordToSpell=LIVRE
-WordLength=5
+WordToSpell=
+WordLength=
 TrainFile=
 Channels=Fz;C3;Cz;C4;P7;P3;Pz;P4;P8;O1;Oz;O2
 paramFile=p300
@@ -12,9 +12,12 @@ FlashGroupDefinitionFilee=/home/lmahe/replayData/P01S1-Cop20-1_flash-group-defin
 FlashGroupDefinitionFile=/home/lmahe/flash-group-definition_2013.09.24_14.15.58.csv
 EarlyStopping=False
 NumberOfGroups=6
-AcquisitionMode=Copy
+AcquisitionMode=Free
 StimulatorMode=Replay
 FlashMode=file
 StopCondition=0.9
 KeyboardLayout=openvibe/applications/externalP300Stimulator/5by10grid-gray.xml
+MonitorIndex=1
+MonitorWidth=800
+MonitorHeight=600
 
