reverting files to master version
Former-commit-id: df30d344c6bdf9adff3507b70201ed4f190faf59

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ SET(OV_COMPILE_TESTS "true")
 
 # By setting SKIP[_FOLDER]* you can skip a subtree (example: SKIP_A_B_C skips folder a/b/c and all its subfolders if any)
 SET(SKIP_DOCUMENTATION "1")
-SET(SKIP_CONTRIB_PLUGINS_PROCESSING_PYTHON "1")
+#SET(SKIP_CONTRIB_PLUGINS_PROCESSING_PYTHON "1")
 
 IF(UNIX)
 	# On Linux, the presence of matlab plugin .so can cause crashes in Simple DSP box as the two may use different versions of boost which are
@@ -68,13 +68,8 @@ ENDIF(UNIX)
 #SET(SKIP_MODULES_STREAM "1")
 #SET(SKIP_MODULES_SYSTEM "1")
 #SET(SKIP_MODULES_XML "1")
-SET(SKIP_APPLICATIONS_PLATFORM_ACQUISITION-SERVER "1")
+#SET(SKIP_APPLICATIONS_PLATFORM_ACQUISITION-SERVER "1")
 #SET(SKIP_APPLICATIONS_PLATFORM_DESIGNER "1")
-
-SET(SKIP_APPLICATIONS_DEMOS "1")
-SET(SKIP_APPLICATIONS_DEMOS_SSVEP-DEMO "1")
-SET(SKIP_APPLICATIONS_DEMOS_VR-DEMO "1")
-#SET(SKIP_EXTERNALS_.GIT "1")
 
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules")
 
