Disable C++11 option in unix but keep a message warning for indicate that new release 0.19 need c++11 compiler support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,13 @@ ELSEIF(UNIX)
         CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
         CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
         IF(COMPILER_SUPPORTS_CXX11)
-                SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+            # TODO after release 0.19 next line will be uncommnent
+            # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
         ELSEIF(COMPILER_SUPPORTS_CXX0X)
-                SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+            # TODO after release 0.19 next line will be uncommnent
+            # SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
         ELSE(COMPILER_SUPPORTS_CXX0X)
-                MESSAGE(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+                MESSAGE(WARNING "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. For the release 0.19 and after, the compiler will need to support C++11.")
         ENDIF(COMPILER_SUPPORTS_CXX11)
 
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
