test application for shared memory and evidence accumulation, fixes and debug messages in Evidence accumulation, misc code cleaning and variables renaming
Former-commit-id: a3be89ebc6b46aa1954bb45a6ea3b6afc5a018cd

--- a/contrib/applications/platform/P300Stimulator/CMakeLists.txt
+++ b/contrib/applications/platform/P300Stimulator/CMakeLists.txt
@@ -8,6 +8,13 @@ SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h)
 ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
 
+#need library to link with tests executables
+ADD_LIBRARY(lib${PROJECT_NAME} SHARED ${source_files})
+SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
+	VERSION ${PROJECT_VERSION}
+	SOVERSION ${PROJECT_VERSION_MAJOR}
+	COMPILE_FLAGS "-DOV_Exports -DOV_Shared")
+
 INCLUDE("FindOpenViBE")
 INCLUDE("FindOpenViBECommon")
 INCLUDE("FindOpenViBEToolkit")
@@ -26,7 +33,7 @@ ADD_DEFINITIONS(-DBOOST_DATE_TIME_NO_LIB)
 IF(OV_COMPILE_TESTS)
 	ADD_DEFINITIONS(-DOUTPUT_TIMING)
 ENDIF(OV_COMPILE_TESTS)
-
+ADD_SUBDIRECTORY("test")#to compile some test executables
 # ---------------------------------
 # Target macros
 # Defines target operating system
@@ -57,6 +64,12 @@ OV_INSTALL_LAUNCH_SCRIPT("ov-externalP300Stimulator")
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
+	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
+	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
+	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
+
+#need library to link with tests executables
+INSTALL(TARGETS lib${PROJECT_NAME}
 	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
 	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
