should fix compilation (broken with previous commit) on ubuntu and windows + fix warnings
Former-commit-id: da76fd85a070e0836e277c4f019c453a1b8eda3b

--- a/contrib/applications/platform/P300Stimulator/CMakeLists.txt
+++ b/contrib/applications/platform/P300Stimulator/CMakeLists.txt
@@ -10,7 +10,7 @@ ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
 
 #need library to link with tests executables
 ADD_LIBRARY(lib${PROJECT_NAME} SHARED ${source_files})
-SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
+SET_TARGET_PROPERTIES(lib${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
 	COMPILE_FLAGS "-DOV_Exports -DOV_Shared")
