--- a/contrib/applications/platform/P300Stimulator/CMakeLists.txt
+++ b/contrib/applications/platform/P300Stimulator/CMakeLists.txt
@@ -24,7 +24,7 @@ ADD_DEFINITIONS(-DBOOST_DATE_TIME_NO_LIB)
 
 #compile output timing to file for tests
 IF(OV_COMPILE_TESTS)
-	ADD_DEFINITIONS(-DOUTPUT_TIMING)
+        ADD_DEFINITIONS(-DOUTPUT_TIMING)
 ENDIF(OV_COMPILE_TESTS)
 
 # ---------------------------------
@@ -34,18 +34,19 @@ ENDIF(OV_COMPILE_TESTS)
 # Defines target compilator
 # ---------------------------------
 IF(WIN32)
-	ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
-	ADD_DEFINITIONS(-DTARGET_OS_Windows)
-	ADD_DEFINITIONS(-DTARGET_ARCHITECTURE_i386)
-	ADD_DEFINITIONS(-DTARGET_COMPILER_VisualStudio)
+        ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
+        ADD_DEFINITIONS(-DTARGET_OS_Windows)
+        ADD_DEFINITIONS(-DTARGET_ARCHITECTURE_i386)
+        ADD_DEFINITIONS(-DTARGET_COMPILER_VisualStudio)
 ENDIF(WIN32)
 IF(UNIX)
-	# ADD_DEFINITIONS(-fvisibility=hidden) # This flag should be present... man gcc
-	ADD_DEFINITIONS(-g)
-	ADD_DEFINITIONS(-fnon-call-exceptions)
-	ADD_DEFINITIONS(-DTARGET_OS_Linux)
-	ADD_DEFINITIONS(-DTARGET_ARCHITECTURE_i386)
-	ADD_DEFINITIONS(-DTARGET_COMPILER_GCC)
+        # ADD_DEFINITIONS(-fvisibility=hidden) # This flag should be present... man gcc
+        ADD_DEFINITIONS(-g)
+        ADD_DEFINITIONS(-fnon-call-exceptions)
+        ADD_DEFINITIONS(-DTARGET_OS_Linux)
+        ADD_DEFINITIONS(-DTARGET_ARCHITECTURE_i386)
+        ADD_DEFINITIONS(-DTARGET_COMPILER_GCC)
+        TARGET_LINK_LIBRARIES(${PROJECT_NAME} rt)
 ENDIF(UNIX)
 
 # ----------------------
@@ -57,9 +58,9 @@ OV_INSTALL_LAUNCH_SCRIPT("ov-externalP300Stimulator")
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
-	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
-	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
-	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
+        RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
 
 INSTALL(DIRECTORY share/ DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe  PATTERN ".svn" EXCLUDE)
 
