fix compilation of tests application on platform other than fedora include sources in the building of the applications instead of creating a library, moved Visualiser class (which contain the main) up to avoid multiple main definition issue
Former-commit-id: 34770c81adde63be0b63970e6ff0a9541251b975

--- a/contrib/applications/platform/P300Stimulator/CMakeLists.txt
+++ b/contrib/applications/platform/P300Stimulator/CMakeLists.txt
@@ -6,14 +6,7 @@ SET(PROJECT_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
 SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h)
-ADD_EXECUTABLE(${PROJECT_NAME} ${source_files})
-
-#need library to link with tests executables
-ADD_LIBRARY(lib${PROJECT_NAME} SHARED ${source_files})
-SET_TARGET_PROPERTIES(lib${PROJECT_NAME} PROPERTIES
-	VERSION ${PROJECT_VERSION}
-	SOVERSION ${PROJECT_VERSION_MAJOR}
-	COMPILE_FLAGS "-DOV_Exports -DOV_Shared")
+ADD_EXECUTABLE(${PROJECT_NAME} ${source_files} ovexP300Visualiser.h ovexP300Visualiser.cpp)
 
 INCLUDE("FindOpenViBE")
 INCLUDE("FindOpenViBECommon")
@@ -58,18 +51,12 @@ ENDIF(UNIX)
 # ----------------------
 # Generate launch script
 # ----------------------
-OV_INSTALL_LAUNCH_SCRIPT("ov-externalP300Stimulator")
+OV_INSTALL_LAUNCH_SCRIPT("openvibe-external-p300-stimulator")
 
 # -----------------------------
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
-	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
-	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
-	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
-
-#need library to link with tests executables
-INSTALL(TARGETS lib${PROJECT_NAME}
 	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
 	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
