--- a/contrib/applications/platform/P300Stimulator/share/openvibe/applications/externalP300Stimulator/P300AcquisitionConfig.conf
+++ b/contrib/applications/platform/P300Stimulator/share/openvibe/applications/externalP300Stimulator/P300AcquisitionConfig.conf
@@ -1,52 +1,52 @@
 #####################################################################################
 # Miscellaneous
 #####################################################################################
-SubjectName=x1
+externalP300_SubjectName=x1
 #target word for Calibration and copy mode, nothing for free mode
-WordToSpell=TARGET
-TrainFile=
+externalP300_WordToSpell=TARGET
+externalP300_TrainFile=PLEASE_REMEMBER_TO_MODIFY_P300AcquisitionConfig.conf
 #we recommand to use these channels
-Channels=Fz;C3;Cz;C4;P7;P3;Pz;P4;P8;O1;Oz;O2
-paramFile=p300
+externalP300_Channels=Fz;C3;Cz;C4;P7;P3;Pz;P4;P8;O1;Oz;O2
+externalP300_paramFile=p300
 
 #####################################################################################
 # Flashing settings
 #####################################################################################
 #Timings 
-FlashDuration=0.133333333333
-InterStimulusOnset=0.233333333333
-InterRepDuration=0.1
+externalP300_FlashDuration=0.133333333333
+externalP300_InterStimulusOnset=0.233333333333
+externalP300_InterRepDuration=0.1
 
 #Grousp of symbols
 #file to write the groups of symbols that have been flashed (or file to read these from if FlashMode is file)
-FlashGroupDefinitionFile=${Path_Samples}/flash-group-definition_$core{date}_$core{time}.csv
+externalP300_FlashGroupDefinitionFile=${Path_Samples}/flash-group-definition_$core{date}_$core{time}.csv
 #can be rowcol (legacy row and column flashing), riprand or file if we use groups from a file (replay mode)
-FlashMode=riprand
+externalP300_FlashMode=riprand
 #number of groups of letter to appear in a repetition.
-NumberOfGroups=6
+externalP300_NumberOfGroups=6
 #Cal for calibration, Copy for copy mode(reproduce a target word) or Free for free spelling
-AcquisitionMode=Cal
+externalP300_AcquisitionMode=Cal
 #online or replay
-StimulatorMode=Online
+externalP300_StimulatorMode=Online
 
 # number of repetition per trial (letter)
 #if early stopping is enabled, this is the maximum number of repetition before a prediction is forced
-NrOfRepetitions=4
+externalP300_NrOfRepetitions=4
 
 #####################################################################################
 # Accumulation settings
 #####################################################################################
-EarlyStopping=False
-StopCondition=0.9
+externalP300_EarlyStopping=False
+externalP300_StopCondition=0.9
 
 #####################################################################################
 # Display settings
 #####################################################################################
 #keyboard layout to use
-KeyboardLayout=openvibe/applications/externalP300Stimulator/5by10grid-gray.xml
+externalP300_KeyboardLayout=openvibe/applications/externalP300Stimulator/5by10grid-gray.xml
 #monitor to use for full screen (only relevant in full screen mode, in windowed mode it will always appear on the primary monitor)
-MonitorIndex=1
+externalP300_MonitorIndex=1
 #size of the window (only relevant in windowed mode, in full screen, the size of the screen is auto detected)
-MonitorWidth=800
-MonitorHeight=600
+externalP300_MonitorWidth=800
+externalP300_MonitorHeight=600
 
