Build: Small tweaks
- OpenViBE version should be only specified in the release branches
- Fixed build not to install Presage databases if Presage was not found


Former-commit-id: 18aa0192d3d64873c0c6cbe59677829b8cf9290c

--- a/contrib/applications/platform/P300Stimulator/CMakeLists.txt
+++ b/contrib/applications/platform/P300Stimulator/CMakeLists.txt
@@ -62,6 +62,10 @@ INSTALL(TARGETS ${PROJECT_NAME}
         LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
 
-INSTALL(DIRECTORY share/ DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe  PATTERN ".svn" EXCLUDE)
+IF(LIB_PRESAGE)
+	INSTALL(DIRECTORY share/ DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe  PATTERN ".svn" EXCLUDE)
+ELSE(LIB_PRESAGE)
+	INSTALL(DIRECTORY share/ DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe  PATTERN ".svn" EXCLUDE PATTERN "*.db" EXCLUDE)
+ENDIF(LIB_PRESAGE)
 
 #INSTALL(DIRECTORY src/   DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
