--- a/contrib/applications/platform/P300Stimulator/share/openvibe/applications/externalP300Stimulator/P300AcquisitionConfig.conf
+++ b/contrib/applications/platform/P300Stimulator/share/openvibe/applications/externalP300Stimulator/P300AcquisitionConfig.conf
@@ -17,20 +17,21 @@ externalP300_FlashDuration=0.133333333333
 externalP300_InterStimulusOnset=0.233333333333
 externalP300_InterRepDuration=0.1
 
-#Grousp of symbols
+#Groups of symbols
 #file to write the groups of symbols that have been flashed (or file to read these from if FlashMode is file)
 externalP300_FlashGroupDefinitionFile=${Path_Samples}/flash-group-definition_$core{date}_$core{time}.csv
 #can be rowcol (legacy row and column flashing), riprand or file if we use groups from a file (replay mode)
 externalP300_FlashMode=riprand
 #number of groups of letter to appear in a repetition.
 externalP300_NumberOfGroups=6
-#Cal for calibration, Copy for copy mode(reproduce a target word) or Free for free spelling
+#Cal for calibration, Cop for copy mode(reproduce a target word) or Fr for free spelling (warning, case sensitive, default copy mode)
 externalP300_AcquisitionMode=Cal
-#online or replay
+#online or replay (warning, case sensitive)
 externalP300_StimulatorMode=Online
 
 # number of repetition per trial (letter)
 #if early stopping is enabled, this is the maximum number of repetition before a prediction is forced
+# do not set it to less than 3 (it will be ignored and set to 3)
 externalP300_NrOfRepetitions=4
 
 #####################################################################################
