--- a/contrib/applications/platform/P300Stimulator/share/applications/CoAdaptP300Stimulator/P300AcquisitionConfig.conf
+++ b/contrib/applications/platform/P300Stimulator/share/applications/CoAdaptP300Stimulator/P300AcquisitionConfig.conf
@@ -1,53 +1,53 @@
 #####################################################################################
 # Miscellaneous
 #####################################################################################
-externalP300_SubjectName=x1
+CoAdaptP300_SubjectName=x1
 #target word for Calibration and copy mode, nothing for free mode
-externalP300_WordToSpell=TARGET
-externalP300_TrainFile=PLEASE_REMEMBER_TO_MODIFY_P300AcquisitionConfig.conf
+CoAdaptP300_WordToSpell=TARGET
+CoAdaptP300_TrainFile=PLEASE_REMEMBER_TO_MODIFY_P300AcquisitionConfig.conf
 #we recommand to use these channels
-externalP300_Channels=Fz;C3;Cz;C4;P7;P3;Pz;P4;P8;O1;Oz;O2
-externalP300_paramFile=p300
+CoAdaptP300_Channels=Fz;C3;Cz;C4;P7;P3;Pz;P4;P8;O1;Oz;O2
+CoAdaptP300_paramFile=p300
 
 #####################################################################################
 # Flashing settings
 #####################################################################################
 #Timings 
-externalP300_FlashDuration=0.133333333333
-externalP300_InterStimulusOnset=0.233333333333
-externalP300_InterRepDuration=0.1
+CoAdaptP300_FlashDuration=0.133333333333
+CoAdaptP300_InterStimulusOnset=0.233333333333
+CoAdaptP300_InterRepDuration=0.1
 
 #Groups of symbols
 #file to write the groups of symbols that have been flashed (or file to read these from if FlashMode is file)
-externalP300_FlashGroupDefinitionFile=${Path_Samples}/flash-group-definition_$core{date}_$core{time}.csv
+CoAdaptP300_FlashGroupDefinitionFile=${Path_Samples}/flash-group-definition_$core{date}_$core{time}.csv
 #can be rowcol (legacy row and column flashing), riprand or file if we use groups from a file (replay mode)
-externalP300_FlashMode=riprand
+CoAdaptP300_FlashMode=riprand
 #number of groups of letter to appear in a repetition.
-externalP300_NumberOfGroups=6
+CoAdaptP300_NumberOfGroups=6
 #Cal for calibration, Cop for copy mode(reproduce a target word) or Fr for free spelling (warning, case sensitive, default copy mode)
-externalP300_AcquisitionMode=Cal
+CoAdaptP300_AcquisitionMode=Cal
 #online or replay (warning, case sensitive)
-externalP300_StimulatorMode=Online
+CoAdaptP300_StimulatorMode=Online
 
 # number of repetition per trial (letter)
 #if early stopping is enabled, this is the maximum number of repetition before a prediction is forced
 # do not set it to less than 3 (it will be ignored and set to 3)
-externalP300_NrOfRepetitions=4
+CoAdaptP300_NrOfRepetitions=4
 
 #####################################################################################
 # Accumulation settings
 #####################################################################################
-externalP300_EarlyStopping=False
-externalP300_StopCondition=0.9
+CoAdaptP300_EarlyStopping=False
+CoAdaptP300_StopCondition=0.9
 
 #####################################################################################
 # Display settings
 #####################################################################################
 #keyboard layout to use
-externalP300_KeyboardLayout=openvibe/applications/externalP300Stimulator/5by10grid-gray.xml
+CoAdaptP300_KeyboardLayout=openvibe/applications/CoAdaptP300Stimulator/5by10grid-gray.xml
 #monitor to use for full screen (only relevant in full screen mode, in windowed mode it will always appear on the primary monitor)
-externalP300_MonitorIndex=1
+CoAdaptP300_MonitorIndex=1
 #size of the window (only relevant in windowed mode, in full screen, the size of the screen is auto detected)
-externalP300_MonitorWidth=800
-externalP300_MonitorHeight=600
+CoAdaptP300_MonitorWidth=800
+CoAdaptP300_MonitorHeight=600
 
