use PathData token instead of relative path change location where flash group is written to the same folder where the data is recorded
Former-commit-id: 1b43dc63d49ce40a23034025be286f5868df67f2

--- a/contrib/applications/platform/P300Stimulator/share/applications/CoAdaptP300Stimulator/P300AcquisitionConfig.conf
+++ b/contrib/applications/platform/P300Stimulator/share/applications/CoAdaptP300Stimulator/P300AcquisitionConfig.conf
@@ -19,7 +19,7 @@ CoAdaptP300_InterRepDuration=0.1
 
 #Groups of symbols
 #file to write the groups of symbols that have been flashed (or file to read these from if FlashMode is file)
-CoAdaptP300_FlashGroupDefinitionFile=${Path_Samples}/flash-group-definition_$core{date}_$core{time}.csv
+CoAdaptP300_FlashGroupDefinitionFile=${Path_Samples}/bci-examples/p300-coadapt-stimulator/signals/flash-group-definition_$core{date}_$core{time}.csv
 #can be rowcol (legacy row and column flashing), riprand or file if we use groups from a file (replay mode)
 CoAdaptP300_FlashMode=riprand
 #number of groups of letter to appear in a repetition.
@@ -44,7 +44,7 @@ CoAdaptP300_StopCondition=0.9
 # Display settings
 #####################################################################################
 #keyboard layout to use
-CoAdaptP300_KeyboardLayout=openvibe/applications/CoAdaptP300Stimulator/5by10grid-gray.xml
+CoAdaptP300_KeyboardLayout=${Path_Data}/applications/CoAdaptP300Stimulator/5by10grid-gray.xml
 #monitor to use for full screen (only relevant in full screen mode, in windowed mode it will always appear on the primary monitor)
 CoAdaptP300_MonitorIndex=1
 #size of the window (only relevant in windowed mode, in full screen, the size of the screen is auto detected)
