--- a/contrib/applications/platform/P300Stimulator/share/scenarios/bci-examples/p300-coadapt-stimulator/p300-classifier-processor.cfg
+++ b/contrib/applications/platform/P300Stimulator/share/scenarios/bci-examples/p300-coadapt-stimulator/p300-classifier-processor.cfg
@@ -1,6 +1,6 @@
 <OpenViBE-SettingsOverride>
 	<SettingValue>Linear Discrimimant Analysis (LDA)</SettingValue>
-	<SettingValue>${Path_Samples_CoAdapt}/bci/p300-external-stimulator/${paramFile}-classifier.cfg</SettingValue>
+	<SettingValue>${Player_ScenarioDirectory}/${paramFile}-classifier.cfg</SettingValue>
 	<SettingValue>OVTK_StimulationId_Label_00</SettingValue>
 	<SettingValue>OVTK_StimulationId_Target</SettingValue>
 	<SettingValue>OVTK_StimulationId_NonTarget</SettingValue>
