Build: Disabled the install of Presage dictionaries
Former-commit-id: eb184df55c0328e7ed92881d43f950f1c1b7e050

--- a/contrib/applications/platform/P300Stimulator/CMakeLists.txt
+++ b/contrib/applications/platform/P300Stimulator/CMakeLists.txt
@@ -62,10 +62,14 @@ INSTALL(TARGETS ${PROJECT_NAME}
         LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
 
-IF(LIB_PRESAGE)
-	INSTALL(DIRECTORY share/ DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe  PATTERN ".svn" EXCLUDE)
-ELSE(LIB_PRESAGE)
+# Due to their size, the presage dictionaries are for now to be installed by hand by the user. 
+# If we allowed install here, the packaging would pull the dictionaries to the resulting exe/deb
+# making it very large. 
+
+# IF(LIB_PRESAGE)
+#	INSTALL(DIRECTORY share/ DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe  PATTERN ".svn" EXCLUDE)
+#ELSE(LIB_PRESAGE)
 	INSTALL(DIRECTORY share/ DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe  PATTERN ".svn" EXCLUDE PATTERN "*.db" EXCLUDE)
-ENDIF(LIB_PRESAGE)
+#ENDIF(LIB_PRESAGE)
 
 #INSTALL(DIRECTORY src/   DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
