Plugins: Added Wavelet transform and EOG Denoising boxes
Did some minor modifications to the sources regarding names, categories etc.
Added script to locate FFTW3
Added the Wavelet transform code that the Wavelet boxes depend on


Former-commit-id: 9f2d0fc236d92b790e4288acb6bbfda20206cfbd

--- a/plugins/processing/signal-processing/CMakeLists.txt
+++ b/plugins/processing/signal-processing/CMakeLists.txt
@@ -6,7 +6,9 @@ SET(PROJECT_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
 SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
 FILE(GLOB_RECURSE source_files src/*.cpp src/*.h src/*.inl)
-ADD_LIBRARY(${PROJECT_NAME} SHARED ${source_files})
+ADD_LIBRARY(${PROJECT_NAME} SHARED ${source_files}
+	"../../../contrib/packages/wavelet2d/wavelet2s.cpp"
+	"../../../contrib/packages/wavelet2d/wavelet2s.h")
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
@@ -19,7 +21,8 @@ INCLUDE("FindOpenViBEModuleEBML")
 INCLUDE("FindOpenViBEModuleSystem")
 INCLUDE("FindThirdPartyBoost")
 INCLUDE("FindThirdPartyEigen")
-INCLUDE("FindThirdPartyITPP")
+INCLUDE("FindThirdPartyFFTW3")		# used by the wavelet library
+INCLUDE("FindThirdPartyITPP")		# note that itpp gives the fftw3 on Win
 #for additionnal coadapt plugins, the following
 INCLUDE("FindThirdPartyBoost_Math")
 INCLUDE("FindOpenViBEModuleXML")
