Plugins: Removed some deprecated boxes
Former-commit-id: a11bdb0f621cdd921c8395e002b3282765134830

--- a/contrib/plugins/processing/classification/CMakeLists.txt
+++ b/contrib/plugins/processing/classification/CMakeLists.txt
@@ -14,11 +14,11 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 
 INCLUDE("FindOpenViBE")
 INCLUDE("FindOpenViBECommon")
-INCLUDE("FindOpenViBEToolkit")
-INCLUDE("FindOpenViBEModuleEBML")
-INCLUDE("FindOpenViBEModuleSystem")
-INCLUDE("FindThirdPartyITPP")
-INCLUDE("FindOpenViBEModuleXML")#for gragient descent lda
+# INCLUDE("FindOpenViBEToolkit")
+# INCLUDE("FindOpenViBEModuleEBML")
+# INCLUDE("FindOpenViBEModuleSystem")
+# INCLUDE("FindThirdPartyITPP")
+# INCLUDE("FindOpenViBEModuleXML")#for gragient descent lda
 
 # ---------------------------------
 # Target macros
