Demos: Removed unused assets from the spaceship lifting demo
Also, renamed the demo to 'spaceship'.


Former-commit-id: 80359d254fa8628f540cdbec6fe49301d690aef4

--- a/applications/demos/vr-demo/CMakeLists.txt
+++ b/applications/demos/vr-demo/CMakeLists.txt
@@ -65,11 +65,11 @@ ENDIF(UNIX)
 # ----------------------
 IF(WIN32)
 	OV_INSTALL_LAUNCH_SCRIPT("openvibe-vr-demo-handball" "handball")
-	OV_INSTALL_LAUNCH_SCRIPT("openvibe-vr-demo-tie-fighter" "tie-fighter")
+	OV_INSTALL_LAUNCH_SCRIPT("openvibe-vr-demo-spaceship" "spaceship")
 ENDIF(WIN32)
 IF(UNIX)
 	OV_INSTALL_LAUNCH_SCRIPT("openvibe-vr-demo-handball" "handball")
-	OV_INSTALL_LAUNCH_SCRIPT("openvibe-vr-demo-tie-fighter" "tie-fighter")
+	OV_INSTALL_LAUNCH_SCRIPT("openvibe-vr-demo-spaceship" "spaceship")
 ENDIF(UNIX)
 
 # -----------------------------
