--- a/applications/demos/vr-demo/share/spaceship/resources.cfg
+++ b/applications/demos/vr-demo/share/spaceship/resources.cfg
@@ -1,8 +1,7 @@
 [General]
 FileSystem=.
 FileSystem=scene-hangar/
-FileSystem=scene-tie/
-FileSystem=scene-vador/
+FileSystem=scene-spaceship/
 FileSystem=scene-misc/
 FileSystem=../common/scene-plane/
 FileSystem=../common/GUI/
